syntax = "proto3";

package post;

import "google/protobuf/empty.proto";

message Post {
  string id = 1;
  string author_name = 2;
  string title = 3;
  string content = 4;
}

message PostId {
  string id = 1;
}

service BlogService {
  rpc CreatePost (Post) returns (PostId);
  rpc ReadPost (PostId) returns (Post);
  rpc UpdatePost (Post) returns (google.protobuf.Empty);
  rpc DeletePost (PostId) returns (google.protobuf.Empty);
  rpc ListAllPost (google.protobuf.Empty) returns (stream Post);
}